--- a/team/episodes.html
+++ b/team/episodes.html
@@ -6,6 +6,6 @@
     
 </head>
 <body>
-    <script>window.location = location.origin + "/episodes.html"</script>
+    <script>window.location = "https://fanspopodcast.github.io/fanspo-podcast-site/episodes.html"</script>
 </body>
 </html>
