--- a/team/index.html
+++ b/team/index.html
@@ -6,6 +6,6 @@
     
 </head>
 <body>
-    <script>window.location = location.origin </script>
+    <script>window.location = "https://fanspopodcast.github.io/fanspo-podcast-site/" </script>
 </body>
 </html>
