--- a/team/platforms.html
+++ b/team/platforms.html
@@ -6,6 +6,6 @@
     
 </head>
 <body>
-    <script>window.location = location.origin + "/platforms.html"</script>
+    <script>window.location = "https://fanspopodcast.github.io/fanspo-podcast-site/platforms.html"</script>
 </body>
 </html>
