--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
 									<li><a href="team/mnrobinson.html">mnrobinson</a></li>
 									<li><a href="team/mohid.html">Mohid</a></li>
 									<li><a href="team/tk.html">TK</a></li>
-									<li>
-										<a>Producers</a>
-										<ul>
-											<li><a href="team/guru.html">guru</a></li>
-											<li><a href="team/swagduck.html">swagduck</a></li>
-										</ul>
-									</li>
+									<li><a href="team/swagduck.html">swagduck</a></li>
 								</ul>
 							</li>
 							<li><a href="feedback.html">Feedback</a></li>
@@ -48,7 +42,7 @@
 					<div class="content">
 						<header>
 							<h2>The Fanspo Podcast</h2>
-							<p>By Mnrobinson, Mohid, TK, Guru, and Swagduck.</p>
+							<p>By Mnrobinson, Mohid, TK, and Swagduck.</p>
 						</header>
 						<span class="image"><img src="images/fanspopod.png" alt="" /></span>
 					</div>
