--- a/episodes.html
+++ b/episodes.html
@@ -25,9 +25,9 @@
 							<li>
 								<a href="team.html">Team</a>
 								<ul>
-									<li><a href="mnrobinson.html">mnrobinson</a></li>
-									<li><a href="mohid.html">Mohid</a></li>
-									<li><a href="tk.html">TK</a></li>
+									<li><a href="team/mnrobinson.html">mnrobinson</a></li>
+									<li><a href="team/mohid.html">Mohid</a></li>
+									<li><a href="team/tk.html">TK</a></li>
 									<li><a href="team/swagduck.html">swagduck</a></li>
 								</ul>
 							</li>
