--- a/team/swagduck.html
+++ b/team/swagduck.html
@@ -28,13 +28,7 @@
 									<li><a href="mnrobinson.html">mnrobinson</a></li>
 									<li><a href="mohid.html">Mohid</a></li>
 									<li><a href="tk.html">TK</a></li>
-									<li>
-										<a>Producers</a>
-										<ul>
-											<li><a href="guru.html">guru</a></li>
-											<li><a href="swagduck.html">swagduck</a></li>
-										</ul>
-									</li>
+									<li><a href="team/swagduck.html">swagduck</a></li>
 								</ul>
 							</li>
 							<li><a href="feedback.html">Feedback</a></li>
