--- a/team/mnrobinson.html
+++ b/team/mnrobinson.html
@@ -43,7 +43,7 @@
 					<div class="content">
 						<header>
 							<h2>mnrobinson</h2>
-							<p style="vertical-align:middle;">The host of the podcast, a fan from Australia who has been studying the game for years. He is a big fan of the Warriors and basically anyone from Australia. Known for saying "Pathetic", "Shameless", "Blasphemous", and "Disgusting." <br><a href="https://fanspo.com/u/mnrobinson_">https://fanspo.com/u/mnrobinson_</a></br></p>
+							<p style="vertical-align:middle;">The host of the podcast, a fan from Australia who has been studying the game for years. He is a big fan of the Warriors and basically anyone from Australia. Known for saying "Pathetic", "Shameless", and "Blasphemous."<br><a href="https://fanspo.com/u/mnrobinson_">https://fanspo.com/u/mnrobinson_</a></br></p>
 						</header>
 						<span class="image"><img src="images/mnrobinson.png" alt="" /></span>
 					</div>
